syntax = "proto3";

package file;

option go_package = "github.com/Mikhalevich/filesharing/pkg/proto/file";

service FileService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc GetFile(FileRequest) returns (stream Chunk) {}
  rpc UploadFile(stream FileUploadRequest) returns (stream File) {} 
  rpc RemoveFile(FileRequest) returns (FileResponse) {}
  rpc IsStorageExists(IsStorageExistsRequest) returns (BoolResponse) {}
  rpc CreateStorage(CreateStorageRequest) returns (CreateStorageResponse) {}
}

message ListRequest {
  string storage = 1;
  bool isPermanent = 2;
}

message File {
    string name = 1;
    int64 size = 2;
    int64 modTime = 3;
}

message ListResponse {
  repeated File files = 1;
}

message FileRequest {
  string storage = 1;
  bool isPermanent = 2;
  string fileName = 3;
}

message FileResponse {
}

message Chunk {
  bytes content = 1;
}

message FileUploadRequest {
  oneof fileChunk {
    FileRequest metadata = 1;
    bytes content = 2;
    bool end = 3;
  }
}

message IsStorageExistsRequest {
  string name = 1;
}

message BoolResponse {
  bool flag = 1;
}

message CreateStorageRequest {
  string name = 1;
  bool withPermanent = 2;
}

message CreateStorageResponse {
}